Update Repository And Service

--- a/cimb-springboot/src/main/resources/application.properties
+++ b/cimb-springboot/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.user=root
 jdbc.password=
-jdbc.url=jdbc:mysql://localhost:3306/myDb?createDatabaseIfNotExist=true
+jdbc.url=jdbc:mysql://localhost:3306/cimb_secure?createDatabaseIfNotExist=true
 # Hibernate Config
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 hibernate.show_sql=false
