--- a/cimb-springboot/src/main/resources/application.properties
+++ b/cimb-springboot/src/main/resources/application.properties
@@ -7,3 +7,5 @@ jdbc.url=jdbc:mysql://localhost:3306/cimb_secure?createDatabaseIfNotExist=true
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 hibernate.show_sql=false
 hibernate.hbm2ddl.auto=create-drop
+# Cross Domain
+origin.cross_domain=http://localhost:3000
