--- a/cimb-springboot/pom.xml
+++ b/cimb-springboot/pom.xml
@@ -28,6 +28,21 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
             <version>2.3.5.RELEASE</version>
         </dependency>
+        <!-- Spring Security -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security.oauth</groupId>
+            <artifactId>spring-security-oauth2</artifactId>
+            <version>2.5.0.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-jwt</artifactId>
+            <version>1.1.1.RELEASE</version>
+        </dependency>
         <!-- JDBC -->
         <dependency>
             <groupId>mysql</groupId>
@@ -63,6 +78,12 @@
             <artifactId>springfox-swagger-ui</artifactId>
             <version>3.0.0</version>
         </dependency>
+        <!-- JWT Oauth 2 -->
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.security.oauth.boot</groupId>-->
+<!--            <artifactId>spring-security-oauth2-autoconfigure</artifactId>-->
+<!--            <version>2.4.0</version>-->
+<!--        </dependency>-->
         <!-- Use in memory H2 -->
         <!--<dependency>
             <groupId>com.h2database</groupId>
