--- a/cimb-springboot/pom.xml
+++ b/cimb-springboot/pom.xml
@@ -43,6 +43,12 @@
             <artifactId>spring-security-jwt</artifactId>
             <version>1.1.1.RELEASE</version>
         </dependency>
+        <!-- Java JWT -->
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.10.3</version>
+        </dependency>
         <!-- JDBC -->
         <dependency>
             <groupId>mysql</groupId>
